--- a/HTML/login.html
+++ b/HTML/login.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <script src="../JS/togglePassword.js"></script>
   <img src="../assets/Logo TT.svg" id="logo">
   <div id="login-field">
     <h2 class="text" id="welcome-text">Bem vindo a plataforma TTwitter</h2>
@@ -20,11 +21,11 @@
       <input class="credentials" id="email" placeholder="example@email.com" type="email"> <br>
       <label for="password">Senha</label>
       <input class="credentials" id="password" placeholder="●●●●●●●●●" type="password"> <br>
-      <img src="../assets/eye.svg" id="toggle-password">
+      <img src="../assets/eye.svg" onclick="togglePassword('password')" id="toggle-password">
     </form>
     <p id="password-retrieval">Esqueci minha senha</p>
     <input class="button" type="submit" id="login-button" value="Entrar"> <br>
-    <input class="button" type="submit" id="signup-button" value="Registrar"> <br>
+    <a href="signup.html"><input class="button" type="submit" id="signup-button" value="Registrar"></a> <br>
     <p class="text" id="terms-conditions-text">Li e estou de acordo com os
       <span class="terms-conditions-highlight">Termos</span>
       e
