[login.html] Adicionar link ao feed

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -24,7 +24,7 @@
       <img src="../assets/eye.svg" onclick="togglePassword('password')" id="toggle-password">
     </form>
     <p id="password-retrieval">Esqueci minha senha</p>
-    <input class="button" type="submit" id="login-button" value="Entrar"> <br>
+    <a href="feed.html"><input class="button" type="submit" id="login-button" value="Entrar"></a> <br>
     <a href="signup.html"><input class="button" type="submit" id="signup-button" value="Registrar"></a> <br>
     <p class="text" id="terms-conditions-text">Li e estou de acordo com os
       <span class="terms-conditions-highlight">Termos</span>
