[feed.html] Corrigir src das imagens na right-sidebar

--- a/HTML/feed.html
+++ b/HTML/feed.html
@@ -36,10 +36,10 @@
 
 <aside>
 	<div class="right-sidebar">
-		<img class="profile-picture" id="default-1" href="../assets/user-default.svg">
-		<img class="profile-picture" id="default-2" href="../assets/user-default.svg">
-		<img class="profile-picture" id="default-3" href="../assets/user-default.svg">
-		<img class="profile-picture" id="default-4" href="../assets/user-default.svg">
+		<img class="profile-picture" id="default-1" src="../assets/user-default.svg">
+		<img class="profile-picture" id="default-2" src="../assets/user-default.svg">
+		<img class="profile-picture" id="default-3" src="../assets/user-default.svg">
+		<img class="profile-picture" id="default-4" src="../assets/user-default.svg">
 	</div>
 </aside>
 
