--- a/HTML/feed.html
+++ b/HTML/feed.html
@@ -36,9 +36,18 @@
 
 <aside>
 	<div class="right-sidebar">
+		<h2 id="people-you-might-know-text">Pessoas que você talvez<br>conheça</h2>
+		<label for="default-1" class="user-label" id="default-1-label">@usuário</label>
+		<label for="default-1-label" class="add-user-label" id="default-1-label">Adicionar</label>
 		<img class="profile-picture" id="default-1" src="../assets/user-default.svg">
+		<label for="default-2" class="user-label" id="default-2-label">@usuário</label>
+		<label for="default-2-label" class="add-user-label" id="default-2-label">Adicionar</label>
 		<img class="profile-picture" id="default-2" src="../assets/user-default.svg">
+		<label for="default-3" class="user-label" id="default-3-label">@usuário</label>
+		<label for="default-3-label" class="add-user-label" id="default-3-label">Adicionar</label>
 		<img class="profile-picture" id="default-3" src="../assets/user-default.svg">
+		<label for="default-4" class="user-label" id="default-4-label">@usuário</label>
+		<label for="default-4-label" class="add-user-label" id="default-4-label">Adicionar</label>
 		<img class="profile-picture" id="default-4" src="../assets/user-default.svg">
 	</div>
 </aside>
