Renomear login.html para index.html

--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -41,8 +41,8 @@
       </label> <br>
     </div>
 
-    <a href="login.html"><input class="button" type="submit" id="signup-button" value="Cadastrar"></a> <br>
-    <a href="login.html"><input class="button" type="submit" id="login-button" value="Fazer Login"></a> <br>
+    <a href="index.html"><input class="button" type="submit" id="signup-button" value="Cadastrar"></a> <br>
+    <a href="index.html"><input class="button" type="submit" id="login-button" value="Fazer Login"></a> <br>
   </div>
 
 </body>
