--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../CSS/login.css">
+  <link rel="stylesheet" href="CSS/login.css">
   <!-- Essa parte habilita a fonte Inter -->
   <link rel="preconnect" href="https://rsms.me/">
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-  <script src="../JS/togglePassword.js"></script>
-  <img src="../assets/Logo TT.svg" id="logo">
+  <script src="JS/togglePassword.js"></script>
+  <img src="assets/Logo TT.svg" id="logo">
 
   <div id="login-field">
     <h2 class="text" id="welcome-text">Bem vindo a plataforma TTwitter</h2>
@@ -22,7 +22,7 @@
       <input class="credentials" id="email" placeholder="example@email.com" type="email"> <br>
       <label for="password">Senha</label>
       <input class="credentials" id="password" placeholder="●●●●●●●●●" type="password"> <br>
-      <img src="../assets/eye.svg" onclick="togglePassword('password')" id="toggle-password">
+      <img src="assets/eye.svg" onclick="togglePassword('password')" id="toggle-password">
     </form>
     <p id="password-retrieval">Esqueci minha senha</p>
     <a href="feed.html"><input class="button" type="submit" id="login-button" value="Entrar"></a> <br>
