--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../CSS/signup.css">
+  <link rel="stylesheet" href="CSS/signup.css">
   <!-- Essa parte habilita a fonte Inter -->
   <link rel="preconnect" href="https://rsms.me/">
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-  <script src="../JS/togglePassword.js"></script>
-  <img src="../assets/Logo TT.svg" id="logo">
+  <script src="JS/togglePassword.js"></script>
+  <img src="assets/Logo TT.svg" id="logo">
 
   <div id="signup-field">
     <h2 class="text" id="signup-text">Cadastro</h2>
@@ -26,10 +26,10 @@
       <input class="credentials" id="birthday" placeholder="xx/xx/xxxx" type="date"> <br>
       <label class="credentials-label" for="password">Senha</label>
       <input class="credentials" id="password" placeholder="●●●●●●●●●" type="password"> <br>
-      <img src="../assets/eye.svg" onclick="togglePassword('password')" id="toggle-password">
+      <img src="assets/eye.svg" onclick="togglePassword('password')" id="toggle-password">
       <label class="credentials-label" id="confirm-password-label" for="confirm-password">Confirmar senha</label>
       <input class="credentials" id="confirm-password" placeholder="●●●●●●●●●" type="password"> <br>
-      <img src="../assets/eye.svg" onclick="togglePassword('confirm-password')" id="toggle-confirm-password">
+      <img src="assets/eye.svg" onclick="togglePassword('confirm-password')" id="toggle-confirm-password">
     </form>
 
     <div class="terms-conditions-field">
